= 2.1.1.3 =
* Single post tab is not working when tab id starts with number - FIXED
* Unable to customize reviews template from child theme - FIXED

= 2.1.1.2 =
* Show alert if title, category fields are hidden & empty on submit add listing - CHANGED
* Best of & categories widgets AJAX params no longer using serialized data for location - CHANGED
* Sanitize email in output email field - FIXED

= 2.1.1.1 =
* Show icon in CF setting when the field has hide conditions - CHANGED
* Improved backend sensitization changes - CHANGED

= 2.1.1.0 =
* GD Categories & search blocks shows validation errors in console - FIXED
* Conditional fields feature for the custom fields for AUI style - ADDED
* Kadence starter templates page is broken when monthly schedule option is set - FIXED
* Caching improvements to enhance memory usage - CHANGED
* Fix conflicts with select2 library with BuddyBoss theme - FIXED
* Show/hide widget option not working with block widgets - FIXED

= 2.1.0.20 =
* Distance to post badge don't set direction on map from ajax loaded listing - FIXED
* Add listing page shows JS error when shortcode used with Elementor text editor - FIXED
* Fix conflicts with select2 library with BuddyBoss theme - FIXED
* Listing featured attachment permalink url is not working - FIXED
* Video shows extra padding on Divi theme - FIXED
* Images object cache not cleared on attachment update - FIXED
* [gd_post_meta] now supports the post link - ADDED

= 2.1.0.19 =
* Hide select layout view button on non-GD layouts - FIXED
* Image slider & lightbox not working in map popup - FIXED
* Add listing zip required option no working with AUI - FIXED
* Region missing for address within Norway with OSM - FIXED
* GD > Listings widget carousel slider option added - ADDED

= 2.1.0.18 =
* GD listings author page not working when author permalink contains custom link - FIXED
* Compatibility changes for Jetpack v8.1+ - CHANGED